# sentinel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.train  pyproject.toml  test_dirty.py
conf/: config.yaml
conf/model/: cnn_v1.yaml
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-uv-for-packaging.md  0003-adopt-hydra-for-configuration-management.md  0004-adopt-clearml-with-local-docker-server.md
outputs/2026-07-20/14-21-42/.hydra/: config.yaml  hydra.yaml
outputs/2026-07-20/14-23-13/.hydra/: config.yaml  hydra.yaml
outputs/2026-07-20/14-24-03/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-07-20/14-24-14/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-07-20/14-36-54/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: download_mnist.py
src/sentinel/: features.py  train.py  upload_data.py
tests/: test_features.py  test_training_config.py
