[project]
name = "sentinel-internal-mlops-platform"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # pycodestyle, pyflakes, isort (import sorting)
ignore = []

[tool.pyright]
include = ["src"]
reportMissingImports = true