[project]
name = "sentinel"
version = "0.1.0"
description = "Enterprise-grade MLOps platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[dependency-groups]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]