[project]
name = "sentinel"
version = "0.1.0"
description = "Enterprise-grade MLOps platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clearml>=2.1.10",
    "hydra-core>=1.3.2",
    "numpy",
    "pandas",
    "pillow>=12.3.0",
    "scikit-learn>=1.7.2",
    "torch>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[dependency-groups]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]
